Initial attempt at helmet artifact effect. DOES NOT DISPLAY
Having trouble getting the artifact to display for two reasons:
1. Needs sprites
2. Difficulty getting the random artifact sprite info to the OnAppearanceUpdate in client clothinng system

--- a/Resources/Prototypes/XenoArch/Effects/utility_effects.yml
+++ b/Resources/Prototypes/XenoArch/Effects/utility_effects.yml
@@ -317,3 +317,24 @@
         Bloodloss: -0.3
         Poison: -0.3
         Radiation: -0.2
+
+- type: artifactEffect
+  id: EffectHat
+  targetDepth: 4
+  effectProb: 1000
+  effectHint: artifact-effect-hint-hat
+  whitelist:
+    components:
+    - Item
+  permanentComponents:
+  - type: Clothing
+    slots:
+    - HEAD
+  - type: PressureProtection
+    highPressureMultiplier: 0.3
+    lowPressureMultiplier: 1000
+  - type: TemperatureProtection
+    heatingCoefficient: 0.5
+    coolingCoefficient: 0.5
+  - type: BreathMask
+    # TODO: Put the sprite of the artifact ON YOUR HEAD
