--- a/Resources/Prototypes/ai_factions.yml
+++ b/Resources/Prototypes/ai_factions.yml
@@ -9,6 +9,7 @@
     - Revolutionary
     - Changeling
     - Heretic
+    - CosmicCultFaction
 
 - type: npcFaction
   id: NanoTrasen
@@ -46,6 +47,7 @@
   - Revolutionary
   - Changeling
   - Heretic
+  - CosmicCultFaction
 
 - type: npcFaction
   id: SimpleNeutral
@@ -60,6 +62,7 @@
   - Zombie
   - Changeling
   - Heretic
+  - CosmicCultFaction
 
 - type: npcFaction
   id: Xeno
@@ -72,6 +75,7 @@
   - Revolutionary
   - Changeling
   - Heretic
+  - CosmicCultFaction
 
 - type: npcFaction
   id: Zombie
@@ -85,6 +89,7 @@
   - Revolutionary
   - Changeling
   - Heretic
+  - CosmicCultFaction
 
 - type: npcFaction
   id: Revolutionary
