--- a/Resources/Prototypes/_Impstation/CosmicCult/God/cosmicgod.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/God/cosmicgod.yml
@@ -1,7 +1,7 @@
 - type: entity
   abstract: true
   id: MobCosmicGodBase
-  name: The Unknown
+  name: The Nameless Unknown
   description: Your mind begins to fracture and break as it fails to comprehend what looms before you.
   components:
   - type: Sprite
