--- a/Resources/Prototypes/_Impstation/CosmicCult/roundstart.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/roundstart.yml
@@ -11,6 +11,7 @@
   - type: AntagObjectives
     objectives:
     - CosmicEntropyObjective
+    - EscapeCosmicCultShuttleObjective
   - type: AntagSelection
     agentName: cosmiccult-roundend-name
     definitions:
