Tweaks + new sounds + new sprites

--- a/Resources/Prototypes/_Impstation/CosmicCult/Objects/astrolabe.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Objects/astrolabe.yml
@@ -4,7 +4,7 @@
   id: AbilityCosmicCultAstrolabe
   description: An unnerving weapon, wrought with a strange glow. Touching it feels like a prickle of static against your nerves.
   components:
-  - type: Unremoveable
+##  - type: Unremoveable
   - type: Item
   - type: Sprite
     sprite: _Impstation/CosmicCult/Objects/cosmiclance.rsi
