--- a/Resources/Prototypes/_Impstation/CosmicCult/Tileset/structures.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Tileset/structures.yml
@@ -4,16 +4,16 @@
   parent: BaseMachine
   description: "A mysterious structure that renders its surroundings weightless.."
   components:
+  - type: SpriteFade
+  - type: CosmicItem
   - type: ZeroGravityArea
     fixture: antiGravity
   - type: Sprite
-    sprite: Objects/Misc/Lights/lights.rsi
+    sprite: _Impstation/CosmicCult/Tileset/pylon.rsi
     layers:
-      - state: floodlight
-      - state: floodlight_on
+      - state: icon
+      - state: overlay-2
         shader: unshaded
-        visible: false
-        map: [ "light" ]
   - type: Physics
     canCollide: true
   - type: Fixtures
@@ -21,10 +21,12 @@
       fix1:
         shape:
           !type:PhysShapeAabb
-          bounds: "-0.2, -0.5, 0.2, 0.5"
+          bounds: "-0.7,-0.2,0.7,0.7"
         density: 50
         mask:
-        - HighImpassable
+        - LargeMobMask
+        layer:
+        - WallLayer
       antiGravity:
         shape:
           !type:PhysShapeCircle
@@ -35,10 +37,19 @@
   - type: PointLight
     radius: 4
     energy: 5
-    color: "#7700FFFF"
-    mask: /Textures/Effects/LightMasks/double_cone.png
-  - type: RotatingLight
-    speed: 100
+    color: "#42a4ae"
+  - type: LightBehaviour
+    behaviours:
+     - !type:FadeBehaviour
+       interpolate: Linear
+       minDuration: 3
+       maxDuration: 5
+       startValue: 4.5
+       endValue: 1.5
+       property: Energy
+       enabled: true
+       isLooped: true
+       reverseWhenFinished: true
   - type: Anchorable
   - type: Damageable
     damageContainer: StructuralInorganic
