Improve ZeroGravityArea overlap prediction
Now the game can support up to 64 overlapping ZeroGravityAreas without prediction errors.

Why you would do this? I don't know, but it's better than the "maybe 3 or 4 max" from before.

--- a/Resources/Prototypes/_Impstation/CosmicCult/Tileset/structures.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Tileset/structures.yml
@@ -35,6 +35,8 @@
         hard: false
         layer:
           - Impassable
+        mask:
+          - Impassable
   - type: PointLight
     radius: 4
     energy: 5
