Wow i can't believe i forgot these commas

--- a/Resources/Prototypes/_Impstation/CosmicCult/Tileset/doors.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Tileset/doors.yml
@@ -4,6 +4,7 @@
   name: malign doorway
   description: What is this..?
   components:
+  - type: CosmicItem
   - type: MeleeSound
     soundGroups:
       Brute:
