--- a/Resources/Prototypes/_Impstation/CosmicCult/Tileset/walls.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Tileset/walls.yml
@@ -4,6 +4,7 @@
   name: malign wall
   description: A strange-looking wall. Staring at it for too long instills a sense of discomfort..
   components:
+  - type: CosmicItem
   - type: Tag
     tags:
       - Wall
