--- a/Resources/Prototypes/_Impstation/CosmicCult/Tileset/structures.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Tileset/structures.yml
@@ -26,7 +26,7 @@
       fix1:
         shape:
           !type:PhysShapeAabb
-          bounds: "-0.22,-0.5,0.22,-0.5"
+          bounds: "-0.22,-0.5,0.22,0.5"
         density: 50
         mask:
         - LargeMobMask
