Sprite tweaks to Zero-g pylon (again)

--- a/Resources/Prototypes/_Impstation/CosmicCult/Tileset/structures.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Tileset/structures.yml
@@ -16,7 +16,9 @@
     sprite: _Impstation/CosmicCult/Tileset/pylon.rsi
     drawdepth: Mobs
     layers:
-      - state: enabled
+      - state: base
+      - state: overlay-enabled
+        shader: unshaded
       - state: overlay-orb
         shader: unshaded
   - type: Physics
