--- a/Resources/Prototypes/_Impstation/CosmicCult/Objects/astrolabe.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Objects/astrolabe.yml
@@ -2,12 +2,12 @@
   name: placeholder astrolabe name
   parent: [ BaseItem, BaseCosmicCultContraband ]
   id: AbilityCosmicCultAstrolabe
-  description: An unnerving weapon, wrought with a strange glow. Touching it feels like a prickle of static against your nerves.
+  description: Placeholder lorem ipsum dolor ect.
   components:
 ##  - type: Unremoveable
   - type: Item
   - type: Sprite
-    sprite: _Impstation/CosmicCult/Objects/cosmiclance.rsi
+    sprite: _Impstation/CosmicCult/Objects/astrolabe.rsi
     state: icon
   - type: Appearance
   - type: UseDelay
