--- a/Resources/Prototypes/_Impstation/CosmicCult/Tileset/interactables.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Tileset/interactables.yml
@@ -5,7 +5,7 @@
   abstract: true
   parent: BaseStructure
   id: MonumentCosmicCultBase
-  name: the nameless monument
+  name: The Monument
   description: I place my holder till it [EXTREMELY LOUD INCORRECT BUZZER]
   suffix: Base
   components:
