im bad at pressing the commit button

--- a/Resources/Prototypes/Guidebook/rules.yml
+++ b/Resources/Prototypes/Guidebook/rules.yml
@@ -410,7 +410,7 @@
   id: SpaceLaw
   name: guide-entry-rules-space-law
   priority: 1
-  text: "/ServerInfo/Guidebook/ServerRules/SpaceLaw/SpaceLaw.xml"
+  text: "/ServerInfo/_Impstation/Guidebook/ServerRules/SpaceLaw/SpaceLaw.xml" #imp edit. this is in an insane location btw
   children:
   - SpaceLawCrimeList
 
