animal abuse edits

--- a/Resources/Prototypes/Guidebook/rules.yml
+++ b/Resources/Prototypes/Guidebook/rules.yml
@@ -418,7 +418,7 @@
   id: SpaceLawCrimeList
   name: guide-entry-rules-sl-crime-list
   priority: 5
-  text: "/ServerInfo/Guidebook/ServerRules/SpaceLaw/SLCrimeList.xml"
+  text: "/ServerInfo/_Impstation/Guidebook/ServerRules/SpaceLaw/SLCrimeList.xml" #imp edit. why are these in server rules
 
 - type: guideEntry
   id: BanTypes
