--- a/Resources/Prototypes/_Impstation/CosmicCult/Objects/astrolabe.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Objects/astrolabe.yml
@@ -1,6 +1,7 @@
 - type: entity
   name: placeholder astrolabe name
   parent: [ BaseCosmicCultContraband ]
+  categories: [ HideSpawnMenu ]
   id: AbilityCosmicCultTool
   description: Placeholder lorem ipsum dolor ect.
   components:
