Adds footprint and drag mark system from Einstein engine (with fixes to make it not murder the server)

--- a/Resources/Prototypes/_Impstation/Entities/Mobs/Species/gray.yml
+++ b/Resources/Prototypes/_Impstation/Entities/Mobs/Species/gray.yml
@@ -117,6 +117,9 @@
     hideLayersOnEquip:
     - Hair
     - Snout
+  - type: FootPrints # WD EDIT
+    leftBarePrint: "footprint-left-bare-dwarf"
+    rightBarePrint: "footprint-right-bare-dwarf"
 
 - type: entity
   parent: BaseSpeciesDummy
