--- a/Resources/Prototypes/_Impstation/Entities/Mobs/Species/spelf.yml
+++ b/Resources/Prototypes/_Impstation/Entities/Mobs/Species/spelf.yml
@@ -126,7 +126,7 @@
           32:
             sprite: Mobs/Species/SpElf/displacement.rsi
             state: hands
-
+  - type: FootPrints # WD EDIT
 
 - type: entity
   parent: BaseSpeciesDummy
