--- a/Content.Server/Content.Server.csproj
+++ b/Content.Server/Content.Server.csproj
@@ -26,5 +26,15 @@
     <ProjectReference Include="..\RobustToolbox\Robust.Server\Robust.Server.csproj" />
     <ProjectReference Include="..\Content.Shared\Content.Shared.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="_DeltaV\Mail\MailSystem.cs" />
+    <Compile Remove="_DeltaV\Mail\MailCommands.cs" />
+    <Compile Remove="_DeltaV\Mail\Components\StationMailRouterComponent.cs" />
+    <Compile Remove="_DeltaV\Mail\Components\MailTeleporterComponent.cs" />
+    <Compile Remove="_DeltaV\Mail\Components\MailReceiverComponent.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="_DeltaV\Mail\Components\" />
+  </ItemGroup>
   <Import Project="..\RobustToolbox\MSBuild\Robust.Properties.targets" />
 </Project>
