--- a/Resources/Prototypes/Entities/Mobs/Species/arachnid.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/arachnid.yml
@@ -118,7 +118,9 @@
         visible: false
   - type: Inventory
     templateId: arachnid
-
+  - type: FootPrints # WD EDIT
+    leftBarePrint: "footprint-left-bare-spider"
+    rightBarePrint: "footprint-right-bare-spider"
 
 - type: entity
   parent: BaseSpeciesDummy
