--- a/Resources/Prototypes/_Impstation/CosmicCult/Actions/cosmiccult.actions.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Actions/cosmiccult.actions.yml
@@ -1,23 +1,3 @@
-# - type: entity
-#   id: ActionSiphonEntropy
-#   name: Extract DNA sting
-#   description: Steal your target's genetic information. Costs 25 chemicals.
-#   categories: [ HideSpawnMenu ]
-#   components:
-#   - type: EntityTargetAction
-#     whitelist:
-#       components:
-#       - Body
-#     canTargetSelf: false
-#     interactOnMiss: false
-#     itemIconStyle: NoItem
-#     icon:
-#       sprite: _Goobstation/Changeling/changeling_abilities.rsi
-#       state: sting_extractdna
-#     event: !type:OnCosmicSiphon {}
-#   - type: CosmicCultAction
-#     chemicalCost: 25
-#     useInLesserForm: true
 
 - type: entity
   id: ActionToggleCosmicTool
@@ -29,8 +9,8 @@
     useDelay: 2
     itemIconStyle: NoItem
     icon:
-      sprite: _Impstation/CosmicCult/Objects/astrolabe.rsi
-      state: icon
+      sprite: _Impstation/CosmicCult/Icons/cosmiccult_abilities.rsi
+      state: tooltoggle
     event: !type:EventCosmicToolToggle {}
   - type: CosmicCultAction
     requireEntropy: false
