changed to a 4x4 model for the artifact.
still needs respriting

--- a/Resources/Prototypes/XenoArch/Effects/utility_effects.yml
+++ b/Resources/Prototypes/XenoArch/Effects/utility_effects.yml
@@ -119,6 +119,9 @@
   - type: HeldSpeedModifier
     walkModifier: 1.2
     sprintModifier: 1.3
+  - type: ClothingSpeedModifier
+    walkModifier: 1.2
+    sprintModifier: 1.3
 
 - type: artifactEffect
   id: EffectDrill
@@ -210,6 +213,7 @@
 - type: artifactEffect
   id: EffectMultitool
   targetDepth: 3
+  effectProb: 1
   effectHint: artifact-effect-hint-multitool
   whitelist:
     components:
@@ -337,4 +341,3 @@
     heatingCoefficient: 0.5
     coolingCoefficient: 0.5
   - type: BreathMask
-    # TODO: Put the sprite of the artifact ON YOUR HEAD
