--- a/Resources/Prototypes/_Impstation/CosmicCult/Objects/compass.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Objects/compass.yml
@@ -1,14 +1,14 @@
 - type: entity
-  name: placeholder astrolabe name
+  name: compass of stars
   parent: [ BaseCosmicCultContraband ]
   categories: [ HideSpawnMenu ]
   id: AbilityCosmicCultTool
-  description: Placeholder lorem ipsum dolor ect.
+  description: A strange tool that resembles an astrolabe - an ancient form of astrological device.
   components:
   - type: Unremoveable
   - type: Item
   - type: Sprite
-    sprite: _Impstation/CosmicCult/Objects/astrolabe.rsi
+    sprite: _Impstation/CosmicCult/Objects/compass.rsi
     state: icon
   - type: Appearance
   - type: UseDelay
@@ -20,7 +20,7 @@
   - type: Prying
     speedModifier: 0.9
     pryPowered: true
-    useSound: /Audio/_Impstation/CosmicCult/astrolabe_dooropen.ogg
+    useSound: /Audio/_Impstation/CosmicCult/compass_dooropen.ogg
   - type: Tool
     qualities:
     - Prying
