--- a/Resources/Prototypes/Catalog/Fills/Books/bookshelf.yml
+++ b/Resources/Prototypes/Catalog/Fills/Books/bookshelf.yml
@@ -62,6 +62,7 @@
       - id: BookAgony
       - id: BookTEGtorial
       - id: BookGatsby
+      - id: BookCosmicCult
 
 - type: entity
   id: BookshelfFilled
