-Some locale changes and tweaks courtesy of @jtfg-dev. -Icon pixel tweaks. -Cosmic cult comms channel (:a), the "Astral Murmurs".

--- a/Resources/Prototypes/_Impstation/CosmicCult/Actions/cosmiccult.actions.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Actions/cosmiccult.actions.yml
@@ -37,7 +37,7 @@
 
 # - type: entity
 #   id: ActionCosmicLapse
-#   name: Lapse
+#   name: Abberant Lapse
 #   description: TODO
 #   categories: [ HideSpawnMenu ]
 #   components:
@@ -53,7 +53,7 @@
 
 # - type: entity
 #   id: ActionCosmicGlare
-#   name: Glare
+#   name: Null Glare
 #   description: TODO
 #   categories: [ HideSpawnMenu ]
 #   components:
