--- a/Resources/Prototypes/_Impstation/CosmicCult/Objects/cosmiclance.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Objects/cosmiclance.yml
@@ -2,7 +2,7 @@
   name: vacuous lance
   parent: [ BaseSword, BaseCosmicCultContraband ]
   id: SpearCosmicCult
-  description: An unnerving weapon, wrought with a strange glow. Touching it feels like a prickle of static against your nerves.
+  description: An unnerving spear, wrought of indescribable material. Being near it feels like a prickle of static spreading through your nerves.
   components:
   - type: Sprite
     sprite: _Impstation/CosmicCult/Objects/cosmiclance.rsi
