--- a/Resources/Prototypes/_Impstation/CosmicCult/Objects/cosmicsword.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Objects/cosmicsword.yml
@@ -2,7 +2,7 @@
   name: entropic blade
   parent: [ BaseSword, BaseCosmicCultContraband ]
   id: SwordCosmicCult
-  description: An eerie weapon, forcibly extruded down into reality. Your instincts tell you that it does not belong here.
+  description: An eerie greatsword wrought of indescribable material, forcibly extruded down into reality. Your instincts tell you that it does not belong here.
   components:
   - type: Sprite
     sprite: _Impstation/CosmicCult/Objects/cosmicsword.rsi
