--- a/Resources/Prototypes/_Impstation/CosmicCult/Tileset/interactables.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Tileset/interactables.yml
@@ -6,7 +6,7 @@
   parent: BaseStructure
   id: MonumentCosmicCultBase
   name: The Monument
-  description: I place my holder till it [EXTREMELY LOUD INCORRECT BUZZER]
+  description: A great slab of unknowledge, only visible to those aware of it. Built of a thousand little nothings, its surface reflects a starless emptiness.
   suffix: Base
   components:
   - type: CosmicItem
