--- a/Resources/Prototypes/_Impstation/CosmicCult/Tileset/structures.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Tileset/structures.yml
@@ -2,7 +2,7 @@
   name: apocryphal obelisk
   id: CosmicAntiGravPylon
   parent: BaseMachine
-  description: "A mysterious structure that renders its surroundings weightless.."
+  description: "A mysterious structure that renders its surroundings weightless. In other words, the inscrutable runes upon it tell artificial gravity to take a hike."
   components:
   - type: CosmicItem
   - type: ZeroGravityArea
