--- a/Resources/Prototypes/_Impstation/CosmicCult/objectives.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/objectives.yml
@@ -30,8 +30,8 @@
 - type: entity
   parent: [BaseCosmicCultObjective, BaseLivingObjective]
   id: EscapeCosmicCultShuttleObjective
-  name: Escape to centcomm alive and unrestrained.
-  description: Wow you killed god or something! Live.
+  name: (PH) - Name - Escape to centcomm alive and unrestrained.
+  description: (PH) - Description - this objective is placeholder.
   components:
   - type: Objective
     difficulty: 1.3
