Objective progress, icon updates, text tweaks, code commenting, entropy mote

--- a/Resources/Prototypes/_Impstation/CosmicCult/Actions/cosmiccult.actions.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Actions/cosmiccult.actions.yml
@@ -32,7 +32,7 @@
     icon:
       sprite: _Impstation/CosmicCult/Icons/cosmiccult_abilities.rsi
       state: siphon
-    event: !type:CosmicSiphonEvent {}
+    event: !type:EventCosmicSiphon {}
   - type: CosmicCultAction
 
 # - type: entity
