--- a/Resources/Prototypes/_Impstation/CosmicCult/roundstart.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/roundstart.yml
@@ -22,7 +22,7 @@
       blacklist:
         components:
         - AntagImmune
-      startingGear: CosmicCultGear
+##      startingGear: CosmicCultGear
       components:
       - type: CosmicCult
       mindRoles:
