--- a/Resources/Prototypes/Body/Organs/arachnid.yml
+++ b/Resources/Prototypes/Body/Organs/arachnid.yml
@@ -21,10 +21,9 @@
         reagents:
         - ReagentId: UncookedAnimalProteins
           Quantity: 5
-  - type: Tag # goob edit
+  - type: Tag
     tags:
-    - Meat
-    - Organ
+      - Meat
 
 - type: entity
   id: OrganArachnidStomach
@@ -35,9 +34,8 @@
   - type: Sprite
     sprite: Mobs/Species/Arachnid/organs.rsi
     state: stomach
-  - type: Item
-    size: Small
-    heldPrefix: stomach
+  - type: Organ # GoobStation
+    slotId: stomach
   - type: Stomach
     updateInterval: 1.5
   - type: SolutionContainerManager
@@ -51,11 +49,9 @@
           Quantity: 5
   - type: Metabolizer
     updateInterval: 1.5
-  - type: Tag # goob edit
-    tags:
-    - Meat
-    - Organ
-    - Stomach
+  - type: Item
+    size: Small
+    heldPrefix: stomach
 
 - type: entity
   id: OrganArachnidLungs
@@ -67,6 +63,8 @@
     layers:
       - state: lung-l
       - state: lung-r
+  - type: Organ # GoobStation
+    slotId: lungs
   - type: Lung
   - type: Metabolizer
     updateInterval: 1.5
@@ -91,11 +89,6 @@
         reagents:
         - ReagentId: UncookedAnimalProteins
           Quantity: 5
-  - type: Tag # goob edit
-    tags:
-    - Meat
-    - Organ
-    - Lungs
 
 - type: entity
   id: OrganArachnidHeart
@@ -116,6 +109,9 @@
     - id: Medicine
     - id: Poison
     - id: Narcotic
+  - type: Organ # GoobStation
+    slotId: heart
+  - type: Heart # GoobStation: Lets you transplant spider hearts into other species
   - type: Tag # goob edit
     tags:
     - Meat
@@ -141,6 +137,9 @@
     groups:
     - id: Alcohol
       rateModifier: 0.1 # removes alcohol very slowly along with the stomach removing it as a drink
+  - type: Organ # GoobStation
+    slotId: liver
+  - type: Liver # GoobStation
   - type: Tag # goob edit
     tags:
     - Meat
@@ -167,11 +166,6 @@
     maxReagents: 5
     metabolizerTypes: [Animal]
     removeEmpty: true
-  - type: Tag # goob edit
-    tags:
-    - Meat
-    - Organ
-    - Kidneys
 
 - type: entity
   id: OrganArachnidEyes
@@ -183,15 +177,17 @@
     layers:
       - state: eyeball-l
       - state: eyeball-r
+  - type: Item
+    size: Small
+    heldPrefix: eyeballs
+  - type: Organ # GoobStation
+    slotId: eyes
+  - type: Eyes # GoobStation
   - type: Tag # goob edit
     tags:
     - Meat
     - Organ
     - Eyes
-  - type: Item
-    size: Small
-    heldPrefix: eyeballs
-
 
 - type: entity
   id: OrganArachnidTongue
@@ -201,8 +197,3 @@
   components:
   - type: Sprite
     state: tongue
-  - type: Tag # goob edit
-    tags:
-    - Meat
-    - Organ
-    - Tongue
