--- a/Resources/Prototypes/Body/Organs/slime.yml
+++ b/Resources/Prototypes/Body/Organs/slime.yml
@@ -48,6 +48,8 @@
     layers:
       - state: lung-l-slime
       - state: lung-r-slime
+  - type: Organ # GoobStation
+    slotId: lungs
   - type: Lung
     alert: LowNitrogen
   - type: Metabolizer
