--- a/Resources/Prototypes/Entities/Mobs/NPCs/carp.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/carp.yml
@@ -318,6 +318,11 @@
     - type: Body
       prototype: Bloodsucker
       requiredLegs: 1
+    - type: SurgeryTarget # GoobStation
+    - type: UserInterface # GoobStation
+      interfaces:
+        enum.SurgeryUIKey.Key:
+          type: SurgeryBui
     - type: Butcherable
       spawned:
         - id: FoodMeatFish
